# loaf

./: Cargo.toml  README.md  rust-toolchain.toml
example/: ata.ume  expr.ume
examples/: expr.lf
src/: elaborate.rs  main.rs
src/core/: evaluate.rs  mod.rs  term.rs  value.rs  var.rs
src/elaborate/: context.rs  conversion.rs  errors.rs  expr.rs
src/language/: error.rs  lexer.rs  mod.rs  parser.rs  position.rs  tokens.rs  tree.rs
src/loaf-cli/: Cargo.toml
src/loaf-cli/src/: main.rs  sample.tao
src/loaf-core/: Cargo.toml
src/loaf-core/src/: lib.rs  term.rs  types.rs  value.rs
src/loaf-driver/: Cargo.toml
src/loaf-driver/src/: errs.rs  lib.rs
src/loaf-elaborate/: Cargo.toml
src/loaf-elaborate/src/: context.rs  conv.rs  decls.rs  errors.rs  eval.rs  expr.rs  lib.rs  pat.rs  unify.rs
src/loaf-parser/: Cargo.toml
src/loaf-parser/src/: errors.rs  expr.rs  lib.rs  macros.rs  state.rs
src/loaf-parser/src/lexer/: mod.rs  tokens.rs
src/loaf-report/: Cargo.toml
src/loaf-report/src/: error.rs  lib.rs  render.rs
src/loaf-span/: Cargo.toml  README.md
src/loaf-span/src/: lib.rs
src/loaf-tree/: Cargo.toml
src/loaf-tree/src/: expr.rs  lib.rs  name.rs
