[package]
name = "loaf-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loaf-span = { path = "../loaf-span"}
loaf-report = { path = "../loaf-report"}
loaf-core = { path = "../loaf-core"}
loaf-parser = { path = "../loaf-parser"}
loaf-elaborate = { path = "../loaf-elaborate"}
